--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-  background: #f3e8ff; /* Lila claro */
+  background: #f3e8ff; 
   display: flex;
   justify-content: center;
   align-items: center;
@@ -8,16 +8,15 @@ body {
   font-family: 'Segoe UI', sans-serif;
 }
 
-/* Calculadora */
 .calculadora {
-  background: #d9d9d9; /* Gris claro */
+  background: #d9d9d9; 
   padding: 20px;
   border-radius: 20px;
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
   width: 300px;
 }
 
-/* Pantalla */
+
 #pantalla {
   width: 100%;
   height: 60px;
@@ -28,24 +27,24 @@ body {
   border: none;
   border-radius: 10px;
   background: #f0f0f0;
-  color: #a259ff; /* Números lilas */
+  color: #d1bdec; 
   box-sizing: border-box;
   outline: none;
 }
 
-/* Contenedor de botones */
+
 .botones {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 10px;
 }
 
-/* Botones */
+
 .botones button {
   height: 60px;
   font-size: 1.5em;
   border: none;
-  background: #bfbfbf; /* Más gris que la calculadora */
+  background: #bfbfbf; 
   color: #4d4d4d;
   border-radius: 10px;
   cursor: pointer;
